crates/ruff_linter/src/rules/flake8_pytest_style/snapshots/ruff_linter__rules__flake8_pytest_style__tests__PT026.snap
---
source: crates/ruff_linter/src/rules/flake8_pytest_style/mod.rs
---
PT026 [*] Useless `pytest.mark.usefixtures` without parameters
  --> PT026.py:19:1
   |
19 | @pytest.mark.usefixtures()
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
20 | def test_error_with_parens():
21 |     pass
help: Remove `usefixtures` decorator or pass parameters
   |
18 |
   - @pytest.mark.usefixtures()
19 +
20 | def test_error_with_parens():
   |
note: This is an unsafe fix and may change runtime behavior

PT026 [*] Useless `pytest.mark.usefixtures` without parameters
  --> PT026.py:24:1
   |
24 | @pytest.mark.usefixtures
   | ^^^^^^^^^^^^^^^^^^^^^^^^
25 | def test_error_no_parens():
26 |     pass
help: Remove `usefixtures` decorator or pass parameters
   |
23 |
   - @pytest.mark.usefixtures
24 +
25 | def test_error_no_parens():
   |
note: This is an unsafe fix and may change runtime behavior
