crates/ruff_linter/src/rules/flake8_pytest_style/snapshots/ruff_linter__rules__flake8_pytest_style__tests__PT029.snap
---
source: crates/ruff_linter/src/rules/flake8_pytest_style/mod.rs
---
PT029 Set the expected warning in `pytest.warns()`
 --> PT029.py:5:10
  |
4 | def test_ok():
5 |     with pytest.warns():
  |          ^^^^^^^^^^^^
6 |         pass
