crates/ruff_linter/src/rules/flake8_pytest_style/snapshots/ruff_linter__rules__flake8_pytest_style__tests__PT030_glob_prefix.snap
---
source: crates/ruff_linter/src/rules/flake8_pytest_style/mod.rs
---
PT030 `pytest.warns(foo.FooWarning)` is too broad, set the `match` parameter or use a more specific warning
  --> PT030.py:22:23
   |
20 |         pass
21 |
22 |     with pytest.warns(FooWarning):
   |                       ^^^^^^^^^^
23 |         pass
